--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<button id="closeMobileButton" type="button" onclick="closeMobileButton()">Close Button</button>
+<button id="closeMobileButton" type="button" onclick="mobile.closeMobileButton()">Close Button</button>
