--- a/index.html
+++ b/index.html
@@ -1,1 +1,3 @@
-<button id="closeMobileButton" type="button" onclick="postMessage('deeplink', '*', 'https://pe.sit.bees-platform.dev/combos?store=bees')">Close Button</button>
+<button id="closeMobileButton" type="button" onclick="closeMobileButton.performClick()">Close Button</button>
+
+<button id="closeMobileButton" type="button" onclick="postMessage('deeplink', '*', 'https://pe.sit.bees-platform.dev/combos?store=bees')">Execute Deeplink</button>
