--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
-<button id="closeMobileButton" type="button" onclick="closeMobileButton.performClick()">Close Button</button>
+<button id="closeMobileButton" type="button" onclick="window.parent.postMessage('closeMobileButton', '*')">Close Button</button>
 
 <button id="executeDeeplink" type="button" onclick="window.parent.postMessage('deeplink', '*', 'https://pe.sit.bees-platform.dev/combos?store=bees')">Execute Deeplink</button>
